--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Demander-deputados
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -12,7 +12,6 @@ APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
-
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
@@ -20,11 +19,10 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=sqlite
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=demander
+DB_DATABASE=deputados_database
 DB_USERNAME=user
 DB_PASSWORD=password
 
@@ -34,20 +32,25 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+# CACHE_STORE=database
+# Se preferir desempenho, pode usar redis:
+CACHE_STORE=redis
+
 QUEUE_CONNECTION=redis
-
-CACHE_STORE=database
-# CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
-
 REDIS_CLIENT=phpredis
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+# isola chaves no Redis (bom quando roda vários projetos):
+REDIS_PREFIX=demander_
 
+# Horizon (opcional, mas útil para separar métricas/keys)
+HORIZON_PREFIX=demander_hz
+
+# MEMCACHED (não usado, pode manter)
+MEMCACHED_HOST=127.0.0.1
+
+# MAIL
 MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
@@ -57,6 +60,7 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# AWS (se usar)
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
@@ -65,4 +69,5 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+# App específico
 DEPUTADOS_API_URL=https://dadosabertos.camara.leg.br/api/v2/
