--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,114 +1,88 @@
 services:
-
-  laravel:
-    container_name: demander-laravel
+  app:
     build:
       context: .
-      dockerfile: ./docker/php/Dockerfile
-    command: ["php-fpm"]
-    restart: no
+      dockerfile: docker/app/Dockerfile
+    container_name: laravel_app
     volumes:
-      - ./:/var/www:delegated
-      - vendor_cache:/var/www/vendor
-      - bootstrap_cache:/var/www/bootstrap/cache
-      - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini:ro
-    ports:
-      - '9000:9000'
-      - '5137:5137' 
-    networks:
-      - demander-network
+      - ./:/var/www
+      - ./docker/app/php.ini:/usr/local/etc/php/php.ini:ro
+      - ./docker/app/local.ini:/usr/local/etc/php/conf.d/local.ini:ro
+    env_file:
+      - .env
     depends_on:
       - mysql
+      - redis
+
+  horizon:
+    build:
+      context: .
+      dockerfile: docker/app/Dockerfile
+    container_name: laravel_horizon
+    command: php artisan horizon
+    restart: unless-stopped
+    volumes:
+      - ./:/var/www
+    env_file:
+      - .env
+    depends_on:
+      - mysql
+      - redis
+
+  scheduler:
+    build:
+      context: .
+      dockerfile: docker/app/Dockerfile
+    container_name: laravel_scheduler
+    command: php artisan schedule:work
+    restart: unless-stopped
+    volumes:
+      - ./:/var/www
+    env_file:
+      - .env
+    depends_on:
+      - mysql
+      - redis
 
   nginx:
-    container_name: demander-nginx
     build:
       context: ./docker/nginx
       dockerfile: Dockerfile
-    restart: no
+    container_name: laravel_nginx
     ports:
-      - '8080:80'
-      - '443:443'
+      - "8080:80"
     volumes:
-      - ./:/var/www:delegated,ro
+      - ./:/var/www
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    networks:
-      - demander-network
     depends_on:
-      - laravel
+      - app
 
   mysql:
-    container_name: demander-mysql
     build:
       context: ./docker/mysql
       dockerfile: Dockerfile
-    command: --default-authentication-plugin=mysql_native_password
-    restart: no
-    volumes:
-      - demander-data:/var/lib/mysql:cached
-      - ./docker/mysql/my.cnf:/etc/mysql/my.cnf
-    networks:
-      - demander-network
-    ports:
-      - '3306:3306'
+    container_name: laravel_mysql
     environment:
-      MYSQL_DATABASE: demander
+      MYSQL_DATABASE: deputados_database
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: user
       MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf:ro
+      - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/00-init.sql:ro
 
   redis:
-    image: redis:7-alpine
-    container_name: demander-redis
-    restart: unless-stopped
+    build:
+      context: ./docker/redis
+    container_name: laravel_redis
     ports:
-      - '6379:6379'
-    networks:
-      - demander-network
-
-  scheduler:
-    container_name: demander-scheduler
-    build:
-      context: .
-      dockerfile: ./docker/php/Dockerfile
-    command: >
-      sh -c "php artisan schedule:work --verbose"
+      - "6379:6379"
     volumes:
-      - ./:/var/www:delegated
-      - bootstrap_cache:/var/www/bootstrap/cache
-    depends_on:
-      - laravel
-    networks:
-      - demander-network
-    restart: unless-stopped
-
-  horizon:
-    container_name: demander-horizon
-    build:
-      context: .
-      dockerfile: ./docker/php/Dockerfile
-    command: ["php", "artisan", "horizon"]
-    working_dir: /var/www
-    restart: unless-stopped
-    volumes:
-      - ./:/var/www:delegated
-      - bootstrap_cache:/var/www/bootstrap/cache
-    depends_on:
-      - redis
-      - laravel
-    networks:
-      - demander-network
-
-networks:
-  demander-network:
-    driver: bridge
+      - redis_data:/data
 
 volumes:
-  demander-data:
-    driver: local
-  vendor_cache:
-    driver: local
-  bootstrap_cache:
-    driver: local
-  node_modules_cache:
-    driver: local
+  mysql_data:
+  redis_data:
