--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,28 +1,24 @@
 server {
     listen 80;
-    index index.php index.html;
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-
+    server_name _;
     root /var/www/public;
 
-    location /build/ {
-        root /var/www/public;
-        try_files $uri $uri/ =404;
-    }
-
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass laravel:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
+    }
+
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass app:9000;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_read_timeout 300;
+    }
+
+    location ~* \.(jpg|jpeg|png|gif|svg|css|js|ico|woff|woff2)$ {
+        expires 7d;
+        access_log off;
     }
 }
